--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,50 @@
   publisher={Oxford University Press}
 }
 
+@article{fillmore1984self,
+  title={Self-similar gravitational collapse in an expanding universe},
+  author={Fillmore, James A and Goldreich, Peter},
+  journal={Astrophysical Journal},
+  volume={281},
+  number={1},
+  pages={1--8},
+  year={1984},
+  publisher={American Astronomical Society}
+}
+
+@article{fang2020beyond,
+  title={Beyond Limber: Efficient computation of angular power spectra for galaxy clustering and weak lensing},
+  author={Fang, Xiao and Krause, Elisabeth and Eifler, Tim and MacCrann, Niall},
+  journal={Journal of Cosmology and Astroparticle Physics},
+  volume={2020},
+  number={05},
+  pages={010},
+  year={2020},
+  publisher={IOP Publishing}
+}
+
+@article{hivon2002master,
+  title={Master of the cosmic microwave background anisotropy power spectrum: a fast method for statistical analysis of large and complex cosmic microwave background data sets},
+  author={Hivon, Eric and G{\'o}rski, Krzysztof M and Netterfield, C Barth and Crill, Brendan P and Prunet, Simon and Hansen, Frode},
+  journal={The Astrophysical Journal},
+  volume={567},
+  number={1},
+  pages={2},
+  year={2002},
+  publisher={IOP Publishing}
+}
+
+@article{chon2004fast,
+  title={Fast estimation of polarization power spectra using correlation functions},
+  author={Chon, Gayoung and Challinor, Anthony and Prunet, Simon and Hivon, Eric and Szapudi, Istv{\'a}n},
+  journal={Monthly Notices of the Royal Astronomical Society},
+  volume={350},
+  number={3},
+  pages={914--926},
+  year={2004},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
 @article{aghanim2020planck,
   title={Planck 2018 results-VI. Cosmological parameters},
   author={Aghanim, Nabila and Akrami, Yashar and Ashdown, Mark and Aumont, J and Baccigalupi, C and Ballardini, M and Banday, AJ and Barreiro, RB and Bartolo, N and Basak, S and others},
