--- a/sections/data.tex
+++ b/sections/data.tex
@@ -5,7 +5,7 @@ Luminous red galaxies (LRGs) are massive galaxies that occupy massive halos, lac
 \subsection{DESI Imaging DR9 LRGs}
 We use photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \citep[DR9;][]{dey2018overview} using the selection designed for the DESI 1\% survey \mr{(CITE)}, described as SV3 in \cite{zhou2022target}. The color-magnitude cuts are described in the $g$, $r$, $z$ bands in the optical and $W1$ band in the infrared, and summarized here in Tab. \ref{tab:ts}. The implementation of these selections in the DESI pipeline is described in \cite{myers2022}. DESI-like LRGs are selected brighter than the survey depth limits, and thus the sample density field is nearly homogenous. To further reduce stellar contamination, the sample is masked for bright stars, foreground bright galaxies as well as clusters of galaxies \footnote{See the maskbits at \url{https://www.legacysurvey.org/dr9/bitmasks/}}. Then, it is binned into \textsc{healpix} \citep{gorski2005healpix} at $\textsc{nside}=256$ to construct the density map with an average density of $800$ deg$^{-2}$ with a coverage around \mr{$14,000$} square degrees of the sky. The density map is corrected for pixel incompleteness in the density field of LRGS using a catalog of random points, hereafter referred to as randoms, uniformly scattered over the footprint with the same cuts and masks applied to the DR9 LRGs. 
 \begin{table*}
-    \caption{Selection criteria for the DESI-like LRG targets \citep{zhou2022target}.}
+    \caption{Selection criteria for the DESI-like LRG targets \citep{zhou2022target}. Magnitudes are corrected for MW extinction.}
     \label{tab:ts}
     \centerline{%
     \begin{tabular}{lll}
@@ -31,21 +31,14 @@ We use photometric LRGs selected from the DESI Imaging Surveys Data Release 9 \c
 \begin{figure*}
     \centering
     \includegraphics[width=\textwidth]{figures/dr9data.pdf}
-    \caption{DESI Imaging Legacy Survey Data Release 9 Luminous Red Galaxies and imaging properties \citep{dey2018overview}. Top: Observed target density field in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues. Bottom: Mollweide projections of DR9 catalog imaging properties in celestial coordinates.}
+    \caption{DESI Imaging Legacy Survey Data Release 9 Luminous Red Galaxies and imaging properties \citep{dey2018overview}. Top: Observed target density field in deg$^{-2}$. Spurious disconnected islands from the DECaLS North footprint at Declination below $-11$ and parts of the DECaLS South with Declination below $-30$ are dropped from the DR9 sample due to potential calibration issues. Bottom: Mollweide projections of DR9 catalog imaging properties (depth and psfsize) and MW foregrounds (extinction and local stellar density) in celestial coordinates.}
     \label{fig:ng}
 \end{figure*}
-%
-%\begin{figure*}
-%    \centering
-%    \includegraphics[width=0.95\textwidth]{figures/hp_features.pdf}
-%    \caption{Mollweide projections of imaging properties in celestial coordinates. }
-%    \label{fig:xmaps}
-%\end{figure*}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/nz_lrg.pdf}
-    \caption{Redshift distribution and bias evolution of DESI LRGs \citep{zhou2021clustering, zhou2022target}. The redshift distribution is deducted from spectroscopy and the bias model assumes a constant clustering amplitude.}
+    \caption{Redshift distribution and bias evolution of DESI LRGs \citep{zhou2021clustering, zhou2022target}. The redshift distribution is deducted from early spectroscopy by DESI and the LRG bias model assumes a constant clustering amplitude.}
     \label{fig:nz}
 \end{figure}
 
@@ -60,9 +53,9 @@ We study the impact of potential sources of systematic error, mapped into \texts
 \end{itemize}
 We also investigate whether including external maps for neutral hydrogen column density \mr{(CITE)} and calibration (e.g., in the z band; \textit{CALIBZ}) could shed light on remaining systematic effects. 
 
-Linear and nonlinear models (approximated using a neural network) are applied to assess the potential of nonlinear systematic error. Parameters of the models are fit by optimizing the negative Poisson log likelihood, $= \sum \lambda - \rho \log(\lambda)$, where the summation runs over pixels, $\rho$ is the galaxy density, and $\lambda$ is either a linear or nonliner model for galaxy density given imaging properties \textbf{x} as input, $\lambda(\textbf{x}) = \log (1+e^{f(\textbf{x})})$. For finding the parameters of the linear model, we perform a Monte Carlo Markov Chain (MCMC) search using the \textsc{emcee} package \mr{(CITE)} and for the nonlinear model we use the implementation from \cite{rezaie2021primordial}; specifically, the nonlinear model is an ensemble of 20 neural network models. Each neural network is constructed with three hidden layers and 20 rectifier units on each layer. Rectifier is identity function for positive input and zero for negative, and it introduces nonlinearities in the neural network. For the linear model we use all data for computing the log of posterior during MCMC while for the nonlinear approach we use $60\%$ of data for training, $20\%$ for validation, and $20\%$ for testing; this is to minimize the chance of over-fitting by the nonlinear model. By changing the permutation of training-testing splits, we test the nonlinear model on entire data. The training is performed for up to 70 training epochs using \textsc{Adam} optimizer, which is a variant of gradient descent, and the learning rate is tuned on the validation set to dynamically varying between $0.001$ and $0.1$, to enable learning robust against local minima. The best model is then selected with the lowest prediction error when applied to the validation set. Finally, we apply the ensemble of 20 best fit models to the test set and average over the predictions. 
+Linear and nonlinear models (approximated using a neural network) are applied to assess the potential of nonlinear systematic error. Parameters of the models are fit by optimizing the negative Poisson log likelihood, $= \sum \lambda - \rho \log(\lambda)$, where the summation runs over pixels, $\rho$ is the galaxy density, and $\lambda$ is either a linear or nonliner model for galaxy density given imaging properties \textbf{x} as input, $\lambda(\textbf{x}) = \log (1+e^{f(\textbf{x})})$. For finding the parameters of the linear model, we perform a Monte Carlo Markov Chain (MCMC) search using the \textsc{emcee} package \mr{(CITE)} and for the nonlinear model we use the implementation from \cite{rezaie2021primordial}; specifically, the nonlinear model is an ensemble of 20 neural network models. Each neural network is constructed with three hidden layers and 20 rectifier units on each layer. Rectifier is identity function for positive input and zero for negative, and it introduces nonlinearities in the neural network. For the linear model we use all data for computing the log of posterior during MCMC while for the nonlinear approach we use $60\%$ of data for training, $20\%$ for validation, and $20\%$ for testing; this is to minimize the chance of over-fitting by the nonlinear model. By changing the permutation of training-testing splits, we test the nonlinear model on entire data. The training is performed for up to 70 training epochs using \textsc{Adam} optimizer, which is a variant of gradient descent, and the learning rate is tuned on the validation set to dynamically varying between $0.001$ and $0.1$, to enable learning robust against local minima. The best model is then selected with the lowest prediction error when applied to the validation set. Finally, we apply the ensemble of 20 best fit models to the test set and average over the predictions to construct the predicted galaxy density maps, which is inverted and used as imaging systematic weights. 
 
-Fig. \ref{fig:npred} shows the predicted density fields from the linear model using various sets of imaging maps, and the nonlinear prediction is also shown for comparison. While most of the large-scale spurious fluctuations are explained by just the extinction map and depth in the z band, adding the psfsize in the r band seems to add more fine structure to the predicted density map. Using all maps does not add much structure. Comparing linear to nonlinear with the same input maps, we find that the nonlinear approach yields finer structure due to a higher flexibility.  Overall, both models predict higher density near the boundaries where the surveys meet the high extinction regions of Milky Way. These regions are probably contaminated artifacts entering the selection either via the direct stellar contamination or the impact of extinction on colors.
+Upon the inspection of the predicted density maps, we find that while most of the large-scale spurious fluctuations are explained by just the extinction map and depth in the z band, adding the psfsize in the r band results in finer structure in the predicted density map. Using all maps as input features for regression does not add much information. Comparing linear to nonlinear with the same input maps, we find that the nonlinear approach yields finer structure due to a higher flexibility.  Overall, both models predict higher density near the boundaries where the surveys meet the high extinction regions of Milky Way. These regions are probably contaminated artifacts entering the selection either via the direct stellar contamination or the impact of extinction on colors.
 
 %\begin{figure}
 %    \centering
@@ -74,14 +67,14 @@ Fig. \ref{fig:npred} shows the predicted density fields from the linear model us
 \begin{figure}
     \includegraphics[width=0.45\textwidth]{figures/pcc.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/pccx.pdf}     
-    \caption{Top: Pearson-r correlation coefficient between galaxy density and imaging properties in the three imaging regions (top) and between imaging properties themselves for the full DESI footprint (bottom). Solid curves represent the range of correlations observed in 100 randomly selected mock realizations.}
+    \caption{Top: Pearson-r correlation coefficient between galaxy density and imaging properties in the three imaging regions. Solid curves represent the range of correlations observed in 100 randomly selected mock density realizations. Bottom: Pearson-r correlation matrix between imaging properties themselves for the full DESI footprint.}
     \label{fig:pcc}
 \end{figure}
 
 
 \subsection{Synthetic lognormal density fields}
-Lognormal distributions are shown to be appropriate for describing matter density fluctuations on large scales \citep{coles1991}. Unlike N-body simulations, the generation of lognormal density fields is rather quick and enables a computationaly cheap method to create a large number of realizations, validate analysis pipelines, and construct covariance matrices for error estimation. \textsc{FLASK}  \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is used to generate series of lognormal galaxy density fields with $\fnl=0$ and $76.92$ using $b(z)=1.43/D(z)$. $1000$ realizations are generated for each $\fnl$. The fiducial cosmology to generate the mocks is based on a flat $\Lambda$CDM universe including one massive neutrino with $m_{\nu}=0.06$ eV, and the rest of cosmological parameters are chosen within $68\%$ of the Planck 2018 results \citep{aghanim2020planck},
+Lognormal distributions are shown to be appropriate for describing matter density fluctuations on large scales \citep{coles1991}. Unlike N-body simulations, the generation of lognormal density fields is rather quick and enables a computationally economic approach to generate a large ensemble of synthetic realizations of galaxy density fields which mimic the redshift and angular distribution of real data. Mocks will enable the validation of analysis software from an end-to-end perspective, and mocks can be used to construct covariance matrices for error estimation and perform statistical tests for characterizing remaining systematic effects. \textsc{FLASK}  \citep[Full-sky Lognormal Astro-fields Simulation Kit;][]{Xavier_2016} is used to generate series of lognormal galaxy density fields with $\fnl=0$ and $76.92$ using a redshift dependent bias $b(z)=1.43/D(z)$. $1000$ realizations are generated for each $\fnl$. The fiducial cosmology to generate the mocks is based on a flat $\Lambda$CDM universe including one massive neutrino with $m_{\nu}=0.06$ eV, and the rest of cosmological parameters are chosen within $68\%$ of the Planck 2018 results \citep{aghanim2020planck},
 \begin{equation*}
     h = 0.67,  \Omega_{M}=0.31, \sigma_{8}=0.8, {\rm and}~ n_{s}=0.97.
 \end{equation*}
-We use the same fiducial cosmology for the analysis of DR9 sample. These parameters are not degenerate with $\fnl$, however the impact of the fiducial cosmology on $\fnl$ constraints is further investigated in Appendix \mr{?}.
+We use the same fiducial cosmology for the analysis of DR9 sample. Our robustness tests indicate that these parameters are not degenerate with $\fnl$, and thus fixing them would not induce biases in $\fnl$ constraints.
