--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 \label{sec:introduction}
-Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation},  at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues with the hot Big Bang theory, such as the isotropy of the CMB temperature, absence of magnetic monopole, and flatness of the Universe \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe was reheated and primordial fluctuations are generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. While the presence of an inflationary era is certain but the details of the inflation field still remain highly unknown, and statistical properties of primordial fluctuations pose as one of the puzzling questions in modern observational cosmology. Analyses of cosmological data have revealed that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, there are some classes of models that predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear parameter $\fnl$ \citep{komatsu2001acoustic},
+Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation},  at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues with the hot Big Bang theory, such as the isotropy and homogeneity of the CMB temperature and LSS density, absence of magnetic monopole, and flatness of the Universe \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe was reheated and primordial fluctuations are generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. While the manifestation of an inflationary era is almost certain given observational pointers but the details of the inflation field or its underlying mechanism still remain vastly unknown, and unveiling statistical properties of primordial fluctuations poses as a challenging question in modern observational cosmology. Early analyses of cosmological datasets have indicated that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, there are some classes of inflationary models that predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear parameter $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
     \Phi = \phi + \fnl [\phi^{2} -  <\phi^{2}>].
 \end{equation}
