--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -4,7 +4,7 @@ Current observations of the cosmic microwave background (CMB), large-scale struc
 \begin{equation}
     \Phi = \phi + \fnl [\phi^{2} -  <\phi^{2}>].
 \end{equation}
-Standard slow roll inflation predicts $\fnl$ to be of order $10^{-2}$, while multifield theories predict considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, a robust measurement of $\fnl$ can be considered as the first stepping stone toward better understanding the physics of the early Universe.  PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
+Standard slow roll inflation theory predicts $\fnl$ to be of order $10^{-2}$, while multifield theories predict considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, a robust measurement of $\fnl$ can be considered as the first stepping stone toward better understanding the physics of the early Universe.  PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
 \begin{equation}\label{eq:db}
 \Delta b \sim \fnl \frac{(b - p)}{k^{2}},
 \end{equation}
