--- a/ms.tex
+++ b/ms.tex
@@ -31,7 +31,7 @@
 \usepackage{style} % the settings are all here 
 \usepackage{booktabs,array}  
 
-\title[PNG with DESI Imaging]{local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
+\title[PNG with DESI Imaging]{Local primordial non-Gaussianity from the large-scale clustering of photometric DESI luminous red galaxies}
 
 \input{sections/authorlist}
 
