--- a/refs.bib
+++ b/refs.bib
@@ -17,6 +17,22 @@
   publisher={Oxford University Press}
 }
 
+@article{ross2011,
+    author = {Ross, Ashley J. and Ho, Shirley and Cuesta, Antonio J. and Tojeiro, Rita and Percival, Will J. and Wake, David and Masters, Karen L. and Nichol, Robert C. and Myers, Adam D. and de Simoni, Fernando and Seo, Hee Jong and Hernández-Monteagudo, Carlos and Crittenden, Robert and Blanton, Michael and Brinkmann, J. and da Costa, Luiz A. N. and Guo, Hong and Kazin, Eyal and Maia, Marcio A. G. and Maraston, Claudia and Padmanabhan, Nikhil and Prada, Francisco and Ramos, Beatriz and Sanchez, Ariel and Schlafly, Edward F. and Schlegel, David J. and Schneider, Donald P. and Skibba, Ramin and Thomas, Daniel and Weaver, Benjamin A. and White, Martin and Zehavi, Idit},
+    title = "{Ameliorating systematic uncertainties in the angular clustering of galaxies: a study using the SDSS-III}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {417},
+    number = {2},
+    pages = {1350-1373},
+    year = {2011},
+    month = {10},
+    abstract = "{We investigate the effects of potential sources of systematic error on the angular and photometric redshift, zphot, distributions of a sample of redshift 0.4 \\&lt; z \\&lt; 0.7 massive galaxies whose selection matches that of the Baryon Oscillation Spectroscopic Survey (BOSS) constant-mass sample. Utilizing over 112 778 BOSS spectra as a training sample, we produce a photometric redshift catalogue for the galaxies in the Sloan Digital Sky Survey eight data release imaging area that, after masking, covers nearly one quarter of the sky (9913 deg2). We investigate fluctuations in the number density of objects in this sample as a function of Galactic extinction, seeing, stellar density, sky background, airmass, photometric offset and North/South Galactic hemisphere. We find that the presence of stars of comparable magnitudes to our galaxies (which are not traditionally masked) effectively removes area. Failing to correct for such stars can produce systematic errors on the measured angular autocorrelation function, w(θ), that are larger than its statistical uncertainty. We describe how one can effectively mask for the presence of the stars, without removing any galaxies from the sample, and minimize the systematic error. Additionally, we apply two separate methods that can be used to correct for the systematic errors imparted by any parameter that can be turned into a map on the sky. We find that failing to properly account for varying sky background introduces a systematic error on w(θ). We measure w(θ), in four zphot slices of width 0.05 between 0.45 \\&lt; zphot \\&lt; 0.65, and find that the measurements, after correcting for the systematic effects of stars and sky background, are generally consistent with a generic Λ cold dark matter model, at scales up to 60°. At scales greater than 3° and zphot \\&gt; 0.5, the magnitude of the corrections we apply is greater than the statistical uncertainty in w(θ). The photometric redshift catalogue we produce will be made publicly available at http://portal.nersc.gov/project/boss/galaxy/photoz/.}",
+    issn = {0035-8711},
+    doi = {10.1111/j.1365-2966.2011.19351.x},
+    url = {https://doi.org/10.1111/j.1365-2966.2011.19351.x},
+    eprint = {https://academic.oup.com/mnras/article-pdf/417/2/1350/3071389/mnras0417-1350.pdf},
+}
+
 @article{fillmore1984self,
   title={Self-similar gravitational collapse in an expanding universe},
   author={Fillmore, James A and Goldreich, Peter},
