--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,22 +1,21 @@
 \section{Introduction}
 \label{sec:introduction}
-Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation},  at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues with the hot Big Bang theory, such as the isotropy and homogeneity of the CMB temperature and LSS density, absence of magnetic monopole, and flatness of the Universe \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe was reheated and primordial fluctuations are generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. While the manifestation of an inflationary era is almost certain given observational pointers but the details of the inflation field or its underlying mechanism still remain vastly unknown, and unveiling statistical properties of primordial fluctuations poses as a challenging question in modern observational cosmology. Early analyses of cosmological datasets have indicated that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, there are some classes of inflationary models that predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear parameter $\fnl$ \citep{komatsu2001acoustic},
+Current observations of the cosmic microwave background (CMB), large-scale structure (LSS), and supernovae (SN) Hubble diagrams are explained to a great degree by a cosmological model that consists of dark energy, dark matter, and ordinary luminous matter, which has gone through a phase of rapid expansion, known as \textit{inflation}, at its early stages \citep[see, e.g.,][]{weinberg2013observational}. The theory of inflation elegantly addresses fundamental issues, such as the isotropy and homogeneity of the CMB temperature and LSS density, absence of magnetic monopole, and flatness of the Universe \citep[see, e.g.,][]{weinberg2008cosmology}. At the end of inflation, the Universe was reheated, and primordial fluctuations were generated to seed the subsequent growth of structure \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Even though the manifestation of an inflationary era is almost certain from observations, the details of the inflation field or its underlying mechanism are vastly unknown, and statistical properties of primordial fluctuations remain an interesting question in modern observational cosmology. Early analyses of cosmological datasets have suggested that initial conditions of the Universe are consistent with Gaussian fluctuations \citep{guth2005inflationary}; however, some classes of inflationary models predict some levels of non-Gaussianities in the primordial gravitational field. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the gravitational potential $\phi$ and is parameterized by a nonlinear coupling constant $\fnl$ \citep{komatsu2001acoustic},
 \begin{equation}
-    \Phi = \phi + \fnl [\phi^{2} -  <\phi^{2}>].
+ \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>].
 \end{equation}
-Standard slow roll inflation theory predicts $\fnl$ to be of order $10^{-2}$, while multifield theories predict considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, a robust measurement of $\fnl$ can be considered as the first stepping stone toward better understanding the physics of the early Universe.  PNG alters local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result it introduces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
+Standard slow-roll inflation theory predicts $\fnl$ to be of order $10^{-2}$, while multi-field theories predict considerably higher values than unity \citep[see, e.g.,][]{de2017next}. Therefore, robust constraints on $\fnl$ are considered the first stepping stone toward better understanding the physics of the early Universe. PNG alters the local number density of galaxies by coupling the long and small wavelength modes of dark matter gravitational field, and as a result, it induces a scale-dependent shift in halo bias \citep[see, e.g.,][]{dalal2008imprints, slosar2008constraints},
 \begin{equation}\label{eq:db}
 \Delta b \sim \fnl \frac{(b - p)}{k^{2}},
 \end{equation}
-where $p$ determines the response of the tracer to the halo gravitational field. Assuming universality of the halo function, i.e., the occupation of halos can be determined from the mass, $p=1$. However, numerical simulations have shown the halo mass function of tracers that are result of recent mergers could depend on more parameters other than mass, and thus $p=1.6$.  Because of the $k^{-2}$ dependence, the effect of local primordial non-Gaussianity leaves its signature on the large scales in the two-point clustering of large-scale structure. 
+where $p$ determines the response of the tracer to the halo gravitational field. Assuming the universality of the halo occupation function, i.e., only mass determines how a halo is occupied by galaxies, $p=1$. However, numerical simulations have shown the halo occupation distribution of tracers that are a result of recent mergers could depend on more properties besides mass, and thus $p=1.6$ \citep{slosar2008constraints}. Because of the dependence of $\Delta b$ on $k^{-2}$, local primordial non-Gaussianity leaves its signature on small wavenumbers (or large scales) in the two-point clustering of galaxies and quasars. 
 
-Current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Next generations of CMB experiments, will improve this constraint but since CMB is limited by cosmic variance, it alone cannot further enhance to break the degeneracy amongst inflationary models \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}.  Constraining $\fnl$ with the three point clustering of LSS is also hindered by the late-time nonlinear effects raised due to structure growth \citep{baldauf2011galaxy, baldauf2011primordial}, and this leaves the scale-dependent bias effect a smoking gun for constraining local PNG with LSS. Another approach for constraining $\fnl$ uses UV Luminosity Function to probe galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to probe with CMB and LSS. \cite{sabti2021JCAP} uses the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$, and forecasts upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope to yield up to four times improvements.
+The current tightest bound on $\fnl$ comes from the three-point clustering analysis of the CMB temperature anisotropies by the Planck satellite, $\fnl=0.9\pm 5.0$ \citep{akrami2019planck}. Upcoming generations of CMB experiments will improve this constraint; but since CMB is limited by cosmic variance, it alone cannot further enhance $\fnl$ constraints, enough to break the degeneracy amongst inflationary models \citep[see, e.g.,][]{ade2019simons}. However, combining CMB with LSS data could cancel cosmic variance, partially even if not completely, and enhance these limits to a precision level required to differentiate between various inflationary models \citep[see, e.g.,][]{schmittfull2018PhRvD}. Constraining $\fnl$ with the three-point clustering of LSS is also hindered by the late-time nonlinear effects raised due to structure growth \citep{baldauf2011galaxy, baldauf2011primordial}, and this limitation establishes the scale-dependent bias effect as the smoking gun for constraining local PNG with LSS. Another method for constraining $\fnl$ employs UV Luminosity Function to probe galaxy abundances and structure formation on small scales (e.g., $k \sim 2~{\rm Mpc}^{-1}$), which are otherwise impossible to explore with CMB and LSS; \cite{sabti2021JCAP} uses the Hubble Space Telescope catalogs \citep{bouwens2015ApJ} to find a $2\sigma$ bound of $-166<\fnl<497$, and predicts upcoming surveys such as the James Webb Space Telescope and the Nancy Grace Roman Space Telescope to yield up to four times improvements.
 
-Measuring $\fnl$ using the scale-dependent bias is however very challenging due to the presence of systematic effects which cause excess clustering signal on the same scales sensitive to $\fnl$. These systematics can be broadly classified into theoretical and observational. Major theoretical systematic effects are caused by the geometry of survey -- a fact that we never observe the full night sky -- which results in coupling different angular modes \citep{beutler2014clustering, de2019integral}. Relativistic effects also induce similar scale-dependent signatures on large scales which could hinder constraining $\fnl$ with scale-dependent bias \citep{wang2020}. Also, matter density fluctuations with wavelengths larger than the survey volume, as known as super-sample modes, also modulate galaxy power spectrum \citep{castorina2020JCAP}. The other effect is commonly referred to as integral constraint and is raised due to our estimation of the mean density directly from data itself, which pushes the clustering signal on modes near the size of survey to zero \citep{peacock1991large, wilson2017rapid}. Ignoring any of these effects leads to biased $\fnl$ constraints \citep{riquelme2022primordial}. On the other hand, observational systematics are primarily caused by varying imaging properties across the sky or calibration issues which leave spurious fluctuations in target density field \citep{huterer2013calibration}. This type of systematic error is much more difficult to handle and has hindered previous studies of local PNG with galaxy and quasar clustering \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DR6 does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to loosen the selection criteria to incorporate fainter targets. Beside canceling cosmic variance, cross correlating different tracers is a technique to alleviate systematic error, as each tracer might respond differently to a source of systematics. \cite{giannantonio2014improved} presents constraints using the integrated Sachs Wolfe effect.
+Measuring $\fnl$ with the scale-dependent bias is nonetheless very demanding due to the presence of various systematic effects which spur excess clustering signal on large scales sensitive to $\fnl$. These systematics can be broadly classified into theoretical and observational. Major theoretical systematic effects are caused by the survey geometry, which couples different angular modes \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate identical scale-dependent signatures on large scales, which could hinder constraining $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than the survey volume, as known as super-sample modes,  modulate the power spectrum of galaxies \citep{castorina2020JCAP}. The other effect is commonly referred to as integral constraint and is raised because the mean galaxy density for constructing the density contrast field is directly estimated from data rather than being known a priori, which pushes the clustering signal on modes near the survey size to zero \citep{peacock1991large,de2019integral}. Ignoring any of these effects leads to biased $\fnl$ constraints \citep[see, e.g.,]{riquelme2022primordial}. On the other hand, observational systematics are predominantly driven by either varying imaging properties across the sky \citep{ross2011} or calibration issues that cause spurious fluctuations in the target density field \citep{huterer2013calibration}. This type of systematic error is much more challenging to control and has hindered previous studies of local PNG with galaxy and quasar clustering \citep[see, e.g.,][]{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DR6 does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and attempt to loosen the selection criteria to incorporate fainter targets. Besides canceling cosmic variance, cross-correlating different tracers is a technique to alleviate systematic error, as each tracer might respond differently to a source of systematics. \cite{giannantonio2014improved} presents $\fnl$ constraints using the integrated Sachs-Wolfe effect.
 
+The Dark Energy Spectroscopic Instrument (DESI) utilizes robots to collect $5000$ spectra in parallel, and it is destined to deliver an unparalleled amount of spectroscopic data, which will enable analyses to deepen our understanding of the energy contents of the Universe. With the volume probed, assuming imaging systematics are under control, DESI along with other upcoming surveys such as Rubin Observatory and SphereX are forecast to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI preselects its targets from its dedicated imaging surveys, as known as DESI Legacy Imaging Surveys, which are collected between 2014 and 2019 from three ground-based telescopes in Chile and the US.
 
- DESI utilizes robots to collect $5000$ spectra in parallel, and it is going to deliver an unparalleled amount of spectroscopic data, which will complete our understanding of the energy contents of the Universe. With the volume probed and assuming imaging systematics are under control, DESI along with other upcoming surveys such as Rubin Observatory, and SphereX are forecast to yield unprecedented constraints on $\fnl$ as well \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}. DESI preselects its targets from its dedicated imaging surveys, as known as Legacy Surveys, which are collected between 2014 and 2019 from three ground-based telescopes in Chile and the US.  
+The characterization of potential sources for systematic error in DESI imaging data is of paramount importance to DESI success, since these effects from imaging catalogs could potentially be inherited into spectroscopic catalogs, and thus influence the science goals with DESI data. DESI targets galaxies and quasars to probe LSS up to redshifts around 4, and effects of observational systematics in DESI targets have been studied in great detail \cite[see, e.g.,][]{zhou2021clustering, chaussidon2022angular}. Improving techniques to characterize systematic error in these samples is also important for science beyond dark energy, such as constraining $\fnl$. Some of the current techniques aim to subtract effects of imaging systematics by either cross-correlating target density and imaging maps (mode deprojection) or solving a least-square optimization to estimate the contribution from each imaging property to target density field (template-based regression), ultimately to regress out the modes affected by imaging properties from the target density. These methods have their limitations as well. For instance, mode deprojection yields an unbiased clustering but can only be used for 2D data and its involved matrix algebra could be time-consuming for a large survey, while template-based regression is computationally inexpensive but removes some of the true clustering signal. Specifically related to the template-based regression method, there is little effort to calibrate and characterize the amount of true clustering signal that is removed during the cleaning process. For studies like BAO and RSD, these effects are shown to be negligible \citep{merz2021clustering}, however, as these effects are especially prominent on large scales \citep{rezaie2021primordial}, they introduce biases in $\fnl$ constraints \citep{mueller2022primordial}.  
  
- Understanding and calibration of systematic error in DESI imaging data is of paramount importance since these effects from imaging catalogs could potentially be inherited into spectroscopic catalogs, and thus impact the science one can do with DESI data. DESI targets galaxies and quasars and the effect of observational systematics in the DESI imaging data have been studied in great detail \cite[see, e.g.,][]{zhou2021clustering, chaussidon2022angular}. Improving methods to characterize systematic error in these samples is also important for measuring $\fnl$. We have a lot of amazing methods to eliminate the effect of imaging systematics. Some of these methods are based on cross correlating the map of target density with maps for imaging properties, while the other methods use a regression analysis to regress out the modes of imaging properties from the target density. While these methods are essentially the same, but they have their own limitations and constraints. For instance the cross correlation techniques can only be used for 2D data and could be time consuming for a large survey, but the template-based regression methods could be fast but yield biased results or remove some of the true clustering signal. Specifically related to the regression based methods, there is a little effort to calibrate and characterize the amount of the true clustering signal which is removed during the cleaning process. For studies like BAO and RSD, these effect might not matter \citep{merz2021clustering}, however, as these effects are very prominent on large scales \citep{rezaie2021primordial}, they could introduce biases in $\fnl$ constraints \citep{mueller2022primordial}.  
- 
-We present an exquisite study of imaging systematic error and characterization of mitigation biases for measuring $\fnl$ using DESI imaging data. We also present enhanced statistical tools to address the data quality and significance of residual systematic error. In this paper, we use the photometric sample of luminous red galaxies from the DESI Legacy Imaging Surveys Data Release 9, hereafter referred to as DR9, to constrain the local primordial non-Gaussianity parameter $\fnl$, while testing the robustness of our results against various sources of systematic effects. We also make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate the DR9 density field with the templates of imaging realities to assess the effectiveness of treatment methods and to characterize the significance of residual systematic error. To assess the sensitivity of signal to cleaning methods, we apply various linear and nonlinear approach with different combinations of templates for imaging properties. This paper is structured as follows. Section \ref{sec:data} describes the DR9 sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory for modeling angular power spectrum and analysis techniques for quantifying various observational systematic effects. Finally, we present the results in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ constraints in Section \ref{sec:conclusion}.
+This paper presents an exquisite study of imaging systematic error and characterization of mitigation biases for constraining $\fnl$ with the sample of luminous red galaxies (LRG) from the DESI Legacy Imaging Surveys Data Release 9 (DR9). We also present enhanced statistical tools to address the data quality and significance of residual systematic error. In this paper, we test the robustness of our results against various sources of systematic effects such as calibration and MW extinction. We also make use of early spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross-correlate the DR9 LRG density field with the templates of imaging properties to evaluate the effectiveness of different treatment methods and to characterize the significance of residual systematic error. To assess the sensitivity of $\fnl$ signal to cleaning methods, we apply various linear and nonlinear approaches with different combinations of templates for imaging properties. This paper is structured as follows. Section \ref{sec:data} describes the DR9 LRG sample and simulations with and without PNG and imaging systematic effects, and Section \ref{sec:method} outlines the theory framework for modeling angular power spectrum and analysis techniques to account for various observational and theoretical systematic error. Finally, we present $\fnl$ constraints in Section \ref{sec:results}, and conclude with a comparison to previous $\fnl$ studies in Section \ref{sec:conclusion}.
